--- a/online/Impact/index.html
+++ b/online/Impact/index.html
@@ -47,10 +47,10 @@
         <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 9150431574/  8778336814</span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="https://twitter.com/kambuuusss" class="twitter"><i class="bi bi-twitter"></i></a>
         <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <a href="https://www.linkedin.com/in/kamlesh-kumar-b428251b5/" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
       </div>
     </div>
   </section><!-- End Top Bar -->
@@ -383,7 +383,7 @@
               <h4>Kamalesh Kumar K</h4>
               <span>ECE PEC 2024</span>
               <div class="social">
-                <!-- <a href=""><i class="bi bi-twitter"></i></a> -->
+                <a href="https://twitter.com/kambuuusss"><i class="bi bi-twitter"></i></a>
                 <a href=""><i class="bi bi-facebook"></i></a>
                 <a href=""><i class="bi bi-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/kamlesh-kumar-b428251b5/" target="_blank"><i class="bi bi-linkedin"></i></a>
@@ -550,10 +550,10 @@
           </a>
           <p>If you found any bug or any other suggestion feel free to contact us.</p>
           <div class="social-links d-flex mt-4">
-            <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+            <a href="https://twitter.com/kambuuusss" class="twitter"><i class="bi bi-twitter"></i></a>
             <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
             <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/kamlesh-kumar-b428251b5/" class="linkedin"><i class="bi bi-linkedin"></i></a>
             
           </div>
         </div>
