--- a/online/Impact/index.html
+++ b/online/Impact/index.html
@@ -377,7 +377,7 @@
             </div>
           </div>End Team Member -->
 
-          <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-xl-3 col-md-6 d-flex " data-aos="fade-up" data-aos-delay="200" style="margin-right: 10px;">
             <div class="member">
               <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="" height="600" width="600">
               <h4>Kamalesh Kumar K</h4>
