--- a/online/Impact/index.html
+++ b/online/Impact/index.html
@@ -44,7 +44,7 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">kamalesh.kumar@pec.edu</a></i>
-        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 9150431574/ 8778336814</span></i>
+        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 8778336814</span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
         <a href="https://twitter.com/kambuuusss" class="twitter"><i class="bi bi-twitter"></i></a>
