--- a/online/Impact/internship.html
+++ b/online/Impact/internship.html
@@ -329,8 +329,8 @@ vacation of 2nd year.
           <p>If you found any bug or any other suggestion feel free to contact us.</p>
           <div class="social-links d-flex mt-4">
             <a href="https://twitter.com/kambuuusss" class="twitter"><i class="bi bi-twitter"></i></a>
-            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.facebook.com/rkeerthivasan1/" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/_.k.e.e.r.t.h.i_._/" class="instagram"><i class="bi bi-instagram"></i></a>
             <a href="https://www.linkedin.com/in/kamlesh-kumar-b428251b5/" class="linkedin"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
