--- a/q&a copy.html
+++ b/q&a copy.html
@@ -126,21 +126,42 @@
     <section class="sample-page">
       <div class="container" data-aos="fade-up">
         <form name="contact" method="POST" data-netlify="true" 
-    data-netlify-honeypot="bot-field" 
-    onSubmit="submit">
+    data-netlify-honeypot="bot-field" action="javascript:void(0);"
+    onSubmit="submit" netlify>
+    
         <input class="d-none" name="bot-field" />
         <div class="form-row">
-            <div class="form-group col-md-6 mt-3">
-                <label for="name">Your Questons</label>
+            <div class="form-group col-md-12 mt-3">
+                <label for="name">Ask your Questions</label>
                 <input type="text" class="form-control" id="name" name="name">
               </div>
-          <div class="form-group col-md-6 mt-3">
-            <label for="inputEmail">Email</label>
+          <div class="form-group col-md-12 mt-3">
+            <label for="inputEmail">Email (helps to notify you, but not mandotory)</label>
             <input type="email" class="form-control" id="inputEmail" name="email">
           </div>
         </div>
-        <button type="submit" class="btn btn-primary mt-3">Send</button>
-      </form>
+        <button type="submit" class="btn btn-primary mt-3" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Send</button>
+        <!-- Button trigger modal -->
+
+
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">Thanks</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        we'll try to answer your question as soon as possible.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onClick="window.location.reload();">Close</button>
+        <!-- <button type="button" class="btn btn-primary">Understood</button> -->
+      </div>
+    </div>
+  </div>
+</div>
 <div class="col-lg-12 text-center">
   <h2>Q&A</h2>
 </div>
